.k8s/overlays/prod/frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: prod
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: frontend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/h3nryc0ding/microk8s_plaground/frontend:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: "250m"
              memory: "500Mi"
            limits:
              cpu: "500m"
              memory: "4Gi"
          livenessProbe:
            httpGet:
              path: "/"
              port: 3000
            initialDelaySeconds: 15
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: "/"
              port: 3000
            initialDelaySeconds: 5
            timeoutSeconds: 1
      imagePullSecrets:
        - name: ghcr-secret
      nodeSelector:
        kubernetes.io/os: linux
