.k8s/overlays/prod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prod
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "130.61.237.219.nip.io"
        - "api.130.61.237.219.nip.io"
      secretName: tls-secret
  rules:
    - host: "130.61.237.219.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: "/(.*)"
            backend:
              service:
                name: frontend
                port:
                  number: 3000
    - host: "api.130.61.237.219.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: "/(.*)"
            backend:
              service:
                name: backend
                port:
                  number: 8080
